--- a/recipe-scaling.html
+++ b/recipe-scaling.html
@@ -5,10 +5,7 @@
   <title>Recipe Scaling</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <!-- Shared Header CSS -->
   <link rel="stylesheet" href="header.css" />
-
-  <!-- Scaling Engine -->
   <script src="scaler.js"></script>
 
   <style>
@@ -18,23 +15,13 @@
       color:#e5e7eb;
       font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;
     }
-
     main{
       max-width:1000px;
       margin:0 auto;
       padding:32px 20px;
     }
-
-    h1{
-      font-size:1.7rem;
-      margin:0 0 6px 0;
-    }
-
-    .subtitle{
-      color:#9ca3af;
-      margin-bottom:22px;
-    }
-
+    h1{font-size:1.7rem;margin:0 0 6px}
+    .subtitle{color:#9ca3af;margin-bottom:22px}
     .panel{
       background:#111c33;
       border:1px solid #334155;
@@ -42,26 +29,19 @@
       padding:20px;
       margin-bottom:18px;
     }
-
-    .panel h2{
-      font-size:1.05rem;
-      margin:0 0 14px 0;
-    }
-
+    .panel h2{font-size:1.05rem;margin:0 0 14px}
     .grid{
       display:grid;
-      grid-template-columns:repeat(auto-fit, minmax(220px, 1fr));
+      grid-template-columns:repeat(auto-fit,minmax(220px,1fr));
       gap:14px;
     }
-
     label{
       display:block;
       font-size:.85rem;
       color:#cbd5e1;
       margin-bottom:6px;
     }
-
-    select, input{
+    select,input{
       width:100%;
       padding:10px;
       border-radius:8px;
@@ -69,58 +49,28 @@
       background:#0f172a;
       color:#e5e7eb;
       font-size:.95rem;
-      outline:none;
     }
-
-    input:focus, select:focus{
-      border-color:#64748b;
-    }
-
     .results{
       display:grid;
-      grid-template-columns:repeat(auto-fit, minmax(210px, 1fr));
+      grid-template-columns:repeat(auto-fit,minmax(210px,1fr));
       gap:14px;
       margin-top:10px;
     }
-
     .result{
       background:#0f1e3a;
       border:1px solid #475569;
       border-radius:10px;
       padding:14px;
     }
-
-    .result .k{
-      font-size:.75rem;
-      color:#9ca3af;
-      margin-bottom:4px;
-    }
-
-    .result .v{
-      font-size:1.15rem;
-      font-weight:650;
-      letter-spacing:.2px;
-    }
-
-    .muted{
-      color:#9ca3af;
-      font-size:.85rem;
-      line-height:1.35;
-    }
-
-    .rowline{
-      height:1px;
-      background:#334155;
-      margin:14px 0;
-    }
-
+    .k{font-size:.75rem;color:#9ca3af;margin-bottom:4px}
+    .v{font-size:1.15rem;font-weight:650}
+    .muted{color:#9ca3af;font-size:.85rem}
     .pill{
       display:inline-block;
       padding:4px 10px;
       border-radius:999px;
       border:1px solid #475569;
       background:#0f172a;
-      color:#cbd5e1;
       font-size:.78rem;
       margin-top:8px;
     }
@@ -129,217 +79,158 @@
 
 <body>
 
-  <!-- GLOBAL HEADER -->
-  <div id="global-header"></div>
+<div id="global-header"></div>
 
-  <script>
-    const PAGE_TITLE = "Recipe Scaling";
-    const PAGE_SUBTITLE = "Wizard scaling from approved base recipes.";
+<script>
+  const PAGE_TITLE = "Recipe Scaling";
+  const PAGE_SUBTITLE = "Wizard scaling from approved base recipes.";
 
-    fetch("header.html", { cache: "no-store" })
-      .then(res => res.text())
-      .then(html => {
-        document.getElementById("global-header").innerHTML = html;
-
-        const title = document.getElementById("page-title");
-        const subtitle = document.getElementById("page-subheading");
-
-        if (title) title.textContent = PAGE_TITLE;
-        if (subtitle) subtitle.textContent = PAGE_SUBTITLE;
-
-        setActiveModule("products");
-      });
-  </script>
-
-  <main>
-    <h1>Recipe Scaling</h1>
-    <div class="subtitle">Select a recipe, enter base gallons, get exact water + scaled ingredients.</div>
-
-    <!-- STEP 1: RECIPE -->
-    <section class="panel">
-      <h2>Step 1 — Select Recipe</h2>
-      <div class="grid">
-        <div>
-          <label for="recipe">Recipe</label>
-          <select id="recipe"></select>
-          <div class="pill" id="recipeMeta">—</div>
-        </div>
-      </div>
-      <div class="muted" style="margin-top:10px;">
-        This wizard assumes the recipe defines a canonical base (ex: 4 gal @ 155 proof) and a fixed final proof (ex: 60).
-      </div>
-    </section>
-
-    <!-- STEP 2: BASE INPUT -->
-    <section class="panel">
-      <h2>Step 2 — Base Spirit Used</h2>
-      <div class="grid">
-        <div>
-          <label for="baseGallons">Gallons of Base Spirit</label>
-          <input id="baseGallons" type="number" step="0.01" value="4" />
-        </div>
-
-        <div>
-          <label for="baseProof">Base Proof</label>
-          <input id="baseProof" type="number" step="1" value="155" />
-        </div>
-
-        <div>
-          <label for="finalProof">Final Proof</label>
-          <input id="finalProof" type="number" step="1" value="60" />
-        </div>
-      </div>
-
-      <div class="muted" style="margin-top:10px;">
-        Base Proof and Final Proof are auto-filled by the recipe, but you can override for special cases.
-      </div>
-    </section>
-
-    <!-- RESULTS -->
-    <section class="panel">
-      <h2>Results</h2>
-      <div id="results" class="results"></div>
-
-      <div class="rowline"></div>
-
-      <div class="muted">
-        Ingredient units come from the recipe book:
-        <strong>Flavoring = mL</strong>, <strong>Sweetener = kg</strong>.
-        Water and volume are calculated in <strong>gallons</strong>.
-      </div>
-    </section>
-  </main>
-
-  <script>
-    // =========================================================
-    // RECIPE DATA (Step 2 will expand this — start small)
-    // Notes:
-    // - flavorMl and sweetenerKg are placeholders until you paste real numbers
-    // - base + final are the authoritative proof targets for math
-    // =========================================================
-    const RECIPES = {
-      // Replace placeholder amounts with your Master Recipe Book numbers.
-      apple_pie: {
-        name: "Apple Pie Moonshine",
-        base: { gallons: 4, proof: 155 },
-        final: { proof: 60 },
-        ingredients: { flavorMl: 0, sweetenerKg: 0 }
-      },
-      blue_raspberry: {
-        name: "Blue Raspberry Moonshine",
-        base: { gallons: 4, proof: 155 },
-        final: { proof: 60 },
-        ingredients: { flavorMl: 0, sweetenerKg: 0 }
-      }
-    };
-
-    const recipeSelect = document.getElementById("recipe");
-    const recipeMeta = document.getElementById("recipeMeta");
-    const baseGallonsInput = document.getElementById("baseGallons");
-    const baseProofInput = document.getElementById("baseProof");
-    const finalProofInput = document.getElementById("finalProof");
-    const resultsDiv = document.getElementById("results");
-
-    // Populate dropdown
-    Object.entries(RECIPES).forEach(([key, r]) => {
-      const opt = document.createElement("option");
-      opt.value = key;
-      opt.textContent = r.name;
-      recipeSelect.appendChild(opt);
+  fetch("header.html",{cache:"no-store"})
+    .then(r=>r.text())
+    .then(html=>{
+      document.getElementById("global-header").innerHTML=html;
+      document.getElementById("page-title").textContent=PAGE_TITLE;
+      document.getElementById("page-subheading").textContent=PAGE_SUBTITLE;
+      setActiveModule("products");
     });
+</script>
 
-    function setInputsFromRecipe() {
-      const r = RECIPES[recipeSelect.value];
-      if (!r) return;
+<main>
+  <h1>Recipe Scaling</h1>
+  <div class="subtitle">Scale approved recipes from base spirit usage</div>
 
-      baseGallonsInput.value = r.base.gallons;
-      baseProofInput.value = r.base.proof;
-      finalProofInput.value = r.final.proof;
+  <!-- STEP 1 -->
+  <section class="panel">
+    <h2>Step 1 — Select Recipe</h2>
+    <select id="recipe"></select>
+    <div class="pill" id="recipeMeta">—</div>
+  </section>
 
-      recipeMeta.textContent =
-        `${r.base.gallons} gal @ ${r.base.proof} proof → ${r.final.proof} proof`;
-    }
+  <!-- STEP 2 -->
+  <section class="panel">
+    <h2>Step 2 — Base Spirit Used</h2>
+    <div class="grid">
+      <div>
+        <label>Gallons of Base Spirit</label>
+        <input id="baseGallons" type="number" step="0.01">
+      </div>
+      <div>
+        <label>Base Proof</label>
+        <input id="baseProof" type="number">
+      </div>
+      <div>
+        <label>Final Proof</label>
+        <input id="finalProof" type="number">
+      </div>
+    </div>
+  </section>
 
-    function runWizard() {
-      const r = RECIPES[recipeSelect.value];
-      if (!r) return;
+  <!-- RESULTS -->
+  <section class="panel">
+    <h2>Results</h2>
+    <div id="results" class="results"></div>
+  </section>
+</main>
 
-      const baseGallons = Number(baseGallonsInput.value);
-      const baseProof = Number(baseProofInput.value);
-      const finalProof = Number(finalProofInput.value);
+<script>
+/* =========================================================
+   RECIPE DEFINITIONS (MATCH MASTER RECIPE BOOK)
+   ========================================================= */
+const RECIPES = {
+  margarita: {
+    name: "Margarita Moonshine",
+    base: { gallons: 4, proof: 164 },
+    final: { proof: 60 },
+    ingredients: [
+      { name:"HFCS 42", amount:8.45, unit:"kg" },
+      { name:"Apex Margarita Flavor", amount:232, unit:"mL" },
+      { name:"Apex Orange Extract", amount:39, unit:"mL" },
+      { name:"Citric Acid", amount:27, unit:"g" },
+      { name:"Malic Acid", amount:8, unit:"g" }
+    ]
+  },
 
-      if (!baseGallons || !baseProof || !finalProof) {
-        resultsDiv.innerHTML = `<div class="muted">Enter valid base gallons and proofs.</div>`;
-        return;
-      }
+  apple_pie: {
+    name: "Apple Pie Moonshine",
+    base: { gallons: 4, proof: 155 },
+    final: { proof: 60 },
+    ingredients: []
+  }
+};
 
-      // =========================================================
-      // STEP 1 REFACTOR COMPLETE:
-      // All base → water → final volume math comes from scaler.js
-      // =========================================================
-      let scaledBase;
-      try {
-        scaledBase = Scaler.scaleFromBase({
-          baseGallons,
-          baseProof,
-          targetProof: finalProof
-        });
-      } catch (e) {
-        resultsDiv.innerHTML = `<div class="muted">${e.message}</div>`;
-        return;
-      }
+const recipeSelect = document.getElementById("recipe");
+const recipeMeta = document.getElementById("recipeMeta");
+const baseGallonsInput = document.getElementById("baseGallons");
+const baseProofInput = document.getElementById("baseProof");
+const finalProofInput = document.getElementById("finalProof");
+const resultsDiv = document.getElementById("results");
 
-      // Recipe multiplier (ingredient scaling)
-      const multiplier = baseGallons / r.base.gallons;
+// Populate recipes
+Object.entries(RECIPES).forEach(([key,r])=>{
+  const o=document.createElement("option");
+  o.value=key;
+  o.textContent=r.name;
+  recipeSelect.appendChild(o);
+});
 
-      // Ingredient scaling (units match Master Recipe Book)
-      const flavorMl = (r.ingredients?.flavorMl || 0) * multiplier;
-      const sweetenerKg = (r.ingredients?.sweetenerKg || 0) * multiplier;
+function loadRecipe(){
+  const r=RECIPES[recipeSelect.value];
+  baseGallonsInput.value=r.base.gallons;
+  baseProofInput.value=r.base.proof;
+  finalProofInput.value=r.final.proof;
+  recipeMeta.textContent=
+    `${r.base.gallons} gal @ ${r.base.proof} → ${r.final.proof} proof`;
+}
 
-      resultsDiv.innerHTML = `
-        <div class="result">
-          <div class="k">Water Required</div>
-          <div class="v">${scaledBase.waterGallons} gal</div>
-        </div>
+function runWizard(){
+  const r=RECIPES[recipeSelect.value];
+  const baseGallons=Number(baseGallonsInput.value);
 
-        <div class="result">
-          <div class="k">Final Volume</div>
-          <div class="v">${scaledBase.finalVolume} gal</div>
-        </div>
+  const scaled=Scaler.scaleFromBase({
+    baseGallons,
+    baseProof:Number(baseProofInput.value),
+    targetProof:Number(finalProofInput.value)
+  });
 
-        <div class="result">
-          <div class="k">Alcohol Content</div>
-          <div class="v">${scaledBase.alcoholPG} PG</div>
-        </div>
+  const multiplier=baseGallons/r.base.gallons;
 
-        <div class="result">
-          <div class="k">Flavoring</div>
-          <div class="v">${flavorMl.toFixed(0)} mL</div>
-          <div class="muted">Scaled × ${multiplier.toFixed(3)}</div>
-        </div>
+  const ingredientBlocks = r.ingredients.map(i=>{
+    return `
+      <div class="result">
+        <div class="k">${i.name}</div>
+        <div class="v">${(i.amount*multiplier).toFixed(3)} ${i.unit}</div>
+        <div class="muted">× ${multiplier.toFixed(3)}</div>
+      </div>
+    `;
+  }).join("");
 
-        <div class="result">
-          <div class="k">Sweetener</div>
-          <div class="v">${sweetenerKg.toFixed(3)} kg</div>
-          <div class="muted">Scaled × ${multiplier.toFixed(3)}</div>
-        </div>
-      `;
-    }
+  resultsDiv.innerHTML=`
+    <div class="result">
+      <div class="k">Water Required</div>
+      <div class="v">${scaled.waterGallons} gal</div>
+    </div>
 
-    // Events
-    recipeSelect.addEventListener("change", () => {
-      setInputsFromRecipe();
-      runWizard();
-    });
+    <div class="result">
+      <div class="k">Final Volume</div>
+      <div class="v">${scaled.finalVolume} gal</div>
+    </div>
 
-    [baseGallonsInput, baseProofInput, finalProofInput].forEach(el => {
-      el.addEventListener("input", runWizard);
-    });
+    <div class="result">
+      <div class="k">Alcohol Content</div>
+      <div class="v">${scaled.alcoholPG} PG</div>
+    </div>
 
-    // Init
-    setInputsFromRecipe();
-    runWizard();
-  </script>
+    ${ingredientBlocks}
+  `;
+}
+
+recipeSelect.addEventListener("change",()=>{loadRecipe();runWizard();});
+[baseGallonsInput,baseProofInput,finalProofInput]
+  .forEach(e=>e.addEventListener("input",runWizard));
+
+loadRecipe();
+runWizard();
+</script>
 
 </body>
 </html>
