--- a/recipe-scaling.html
+++ b/recipe-scaling.html
@@ -5,7 +5,10 @@
   <title>Recipe Scaling</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+  <!-- Shared Header CSS -->
   <link rel="stylesheet" href="header.css" />
+
+  <!-- Scaling Engine -->
   <script src="scaler.js"></script>
 
   <style>
@@ -22,6 +25,7 @@
     }
     h1{font-size:1.7rem;margin:0 0 6px}
     .subtitle{color:#9ca3af;margin-bottom:22px}
+
     .panel{
       background:#111c33;
       border:1px solid #334155;
@@ -30,17 +34,20 @@
       margin-bottom:18px;
     }
     .panel h2{font-size:1.05rem;margin:0 0 14px}
+
     .grid{
       display:grid;
       grid-template-columns:repeat(auto-fit,minmax(220px,1fr));
       gap:14px;
     }
+
     label{
       display:block;
       font-size:.85rem;
       color:#cbd5e1;
       margin-bottom:6px;
     }
+
     select,input{
       width:100%;
       padding:10px;
@@ -50,21 +57,25 @@
       color:#e5e7eb;
       font-size:.95rem;
     }
+
     .results{
       display:grid;
       grid-template-columns:repeat(auto-fit,minmax(210px,1fr));
       gap:14px;
       margin-top:10px;
     }
+
     .result{
       background:#0f1e3a;
       border:1px solid #475569;
       border-radius:10px;
       padding:14px;
     }
+
     .k{font-size:.75rem;color:#9ca3af;margin-bottom:4px}
     .v{font-size:1.15rem;font-weight:650}
     .muted{color:#9ca3af;font-size:.85rem}
+
     .pill{
       display:inline-block;
       padding:4px 10px;
@@ -135,33 +146,31 @@
 <script>
 /* =========================================================
    RECIPE DEFINITIONS (MATCH MASTER RECIPE BOOK)
-   =========================================================
-   Ingredient types supported:
-   - { type:"percent_vv", percent:0.14, densityKgPerL:1.613 }  // HFCS 42 example
-   - { type:"liquid", amount:232, unit:"mL" }                  // flavor/extract liquids
-   - { type:"solid",  amount:27,  unit:"g"  }                  // acids, powders
-   - { type:"mass",   amount:8.45, unit:"kg" }                 // if you ever want mass-only items
-*/
+   - HFCS affects water volume (percent v/v)
+   - Flavor extracts DO NOT affect water volume
+   - Acids DO NOT affect water volume
+   ========================================================= */
 
 const RECIPES = {
   margarita: {
     name: "Margarita Moonshine",
-    base: { gallons: 4, proof: 164 },     // canonical recipe book line
+    base: { gallons: 4, proof: 164 },
     final: { proof: 60 },
     ingredients: [
-      // Sweetness rule: 14% v/v using HFCS 42
-      { name: "HFCS 42", type: "percent_vv", percent: 0.14, densityKgPerL: 1.613 },
+      { name:"HFCS 42", type:"percent_vv", percent:0.14, densityKgPerL:1.613 },
 
-      // Liquids
-      { name: "Apex Margarita Flavor", type: "liquid", amount: 232, unit: "mL" },
-      { name: "Apex Orange Extract",   type: "liquid", amount: 39,  unit: "mL" },
+      { name:"Apex Margarita Flavor", type:"liquid", amount:232, unit:"mL" },
+      { name:"Apex Orange Extract",   type:"liquid", amount:39,  unit:"mL" },
 
-      // Solids
-      { name: "Citric Acid", type: "solid", amount: 27, unit: "g" },
-      { name: "Malic Acid",  type: "solid", amount: 8,  unit: "g" }
+      { name:"Citric Acid", type:"solid", amount:27, unit:"g" },
+      { name:"Malic Acid",  type:"solid", amount:8,  unit:"g" }
     ]
   }
 };
+
+const GAL_TO_L = 3.785411784;
+
+function fmt(n,d=3){ return Number(n).toFixed(d); }
 
 const recipeSelect = document.getElementById("recipe");
 const recipeMeta = document.getElementById("recipeMeta");
@@ -170,148 +179,98 @@ const baseProofInput = document.getElementById("baseProof");
 const finalProofInput = document.getElementById("finalProof");
 const resultsDiv = document.getElementById("results");
 
-/* ---------- Unit helpers ---------- */
-const GAL_TO_L = 3.785411784;
-
-function toGallons(amount, unit){
-  const u = (unit || "").toLowerCase();
-  if (u === "gal" || u === "gallon" || u === "gallons") return amount;
-  if (u === "l" || u === "liter" || u === "liters") return amount / GAL_TO_L;
-  if (u === "ml") return (amount / 1000) / GAL_TO_L;
-  return 0; // solids/mass don't contribute volume here
-}
-
-function fmt(n, d=2){ return Number(n).toFixed(d); }
-
-/* ---------- Populate recipes ---------- */
+// Populate recipes
 Object.entries(RECIPES).forEach(([key,r])=>{
-  const o = document.createElement("option");
-  o.value = key;
-  o.textContent = r.name;
+  const o=document.createElement("option");
+  o.value=key;
+  o.textContent=r.name;
   recipeSelect.appendChild(o);
 });
 
 function loadRecipe(){
-  const r = RECIPES[recipeSelect.value];
-  baseGallonsInput.value = r.base.gallons;
-  baseProofInput.value = r.base.proof;
-  finalProofInput.value = r.final.proof;
-  recipeMeta.textContent = `${r.base.gallons} gal @ ${r.base.proof} → ${r.final.proof} proof`;
+  const r=RECIPES[recipeSelect.value];
+  baseGallonsInput.value=r.base.gallons;
+  baseProofInput.value=r.base.proof;
+  finalProofInput.value=r.final.proof;
+  recipeMeta.textContent =
+    `${r.base.gallons} gal @ ${r.base.proof} → ${r.final.proof} proof`;
 }
 
 function runWizard(){
-  const r = RECIPES[recipeSelect.value];
-  if (!r) return;
+  const r=RECIPES[recipeSelect.value];
+  const baseGallons=Number(baseGallonsInput.value);
+  const baseProof=Number(baseProofInput.value);
+  const finalProof=Number(finalProofInput.value);
 
-  const baseGallons = Number(baseGallonsInput.value);
-  const baseProof   = Number(baseProofInput.value);
-  const finalProof  = Number(finalProofInput.value);
-
-  if (!baseGallons || !baseProof || !finalProof){
-    resultsDiv.innerHTML = `<div class="muted">Enter valid base gallons and proofs.</div>`;
+  if(!baseGallons||!baseProof||!finalProof){
+    resultsDiv.innerHTML=`<div class="muted">Enter valid inputs.</div>`;
     return;
   }
 
-  // Final volume + PG from authoritative engine
-  let scaledBase;
-  try{
-    scaledBase = Scaler.scaleFromBase({
-      baseGallons,
-      baseProof,
-      targetProof: finalProof
-    });
-  } catch(e){
-    resultsDiv.innerHTML = `<div class="muted">${e.message}</div>`;
-    return;
-  }
+  const scaled=Scaler.scaleFromBase({
+    baseGallons,
+    baseProof,
+    targetProof:finalProof
+  });
 
-  // Scale factor for “recipe book amounts”
   const multiplier = baseGallons / r.base.gallons;
 
-  // Compute volume-taking additions (HFCS + other liquids if desired)
-  let volumeAdditionsGal = 0;
+  let hfcsVolumeGal = 0;
 
-  // Build ingredient cards
-  const ingredientBlocks = (r.ingredients || []).map(ing => {
-    const type = ing.type || "mass";
-
-    // HFCS / sweetness rule: percent of FINAL volume
-    if (type === "percent_vv"){
-      const volGal = scaledBase.finalVolume * ing.percent; // v/v
-      volumeAdditionsGal += volGal;
-
-      const volL = volGal * GAL_TO_L;
-      const kg = (ing.densityKgPerL ? (volL * ing.densityKgPerL) : null);
+  const ingredientBlocks = r.ingredients.map(i=>{
+    if(i.type==="percent_vv"){
+      hfcsVolumeGal = scaled.finalVolume * i.percent;
+      const kg = hfcsVolumeGal * GAL_TO_L * i.densityKgPerL;
 
       return `
         <div class="result">
-          <div class="k">${ing.name}</div>
-          <div class="v">${fmt(volGal,3)} gal</div>
-          <div class="muted">
-            ${fmt(ing.percent*100,1)}% v/v of final
-            ${kg !== null ? ` • ≈ ${fmt(kg,2)} kg` : ""}
-          </div>
+          <div class="k">${i.name}</div>
+          <div class="v">${fmt(hfcsVolumeGal)} gal</div>
+          <div class="muted">≈ ${fmt(kg,2)} kg (${i.percent*100}% v/v)</div>
         </div>
       `;
     }
 
-    // Liquids: scale by multiplier, contribute (optionally) to volume
-    if (type === "liquid"){
-      const scaledAmt = (ing.amount || 0) * multiplier;
-      const volGal = toGallons(scaledAmt, ing.unit || "mL");
-      // If you want to subtract flavor/extract volume from water too, keep next line:
-      volumeAdditionsGal += volGal;
-
+    if(i.type==="liquid"){
+      const amt = i.amount * multiplier;
       return `
         <div class="result">
-          <div class="k">${ing.name}</div>
-          <div class="v">${fmt(scaledAmt, ing.unit==="mL" ? 0 : 3)} ${ing.unit}</div>
+          <div class="k">${i.name}</div>
+          <div class="v">${fmt(amt,0)} ${i.unit}</div>
           <div class="muted">× ${fmt(multiplier,4)}</div>
         </div>
       `;
     }
 
-    // Solids: scale by multiplier, no volume effect
-    if (type === "solid"){
-      const scaledAmt = (ing.amount || 0) * multiplier;
+    if(i.type==="solid"){
+      const amt = i.amount * multiplier;
       return `
         <div class="result">
-          <div class="k">${ing.name}</div>
-          <div class="v">${fmt(scaledAmt,3)} ${ing.unit}</div>
+          <div class="k">${i.name}</div>
+          <div class="v">${fmt(amt)} ${i.unit}</div>
           <div class="muted">× ${fmt(multiplier,4)}</div>
         </div>
       `;
     }
-
-    // Mass-only fallback
-    const scaledAmt = (ing.amount || 0) * multiplier;
-    return `
-      <div class="result">
-        <div class="k">${ing.name}</div>
-        <div class="v">${fmt(scaledAmt,3)} ${ing.unit || ""}</div>
-        <div class="muted">× ${fmt(multiplier,4)}</div>
-      </div>
-    `;
   }).join("");
 
-  // ✅ Correct water: subtract HFCS + other liquid volumes from water
-  const correctedWaterGal = scaledBase.finalVolume - baseGallons - volumeAdditionsGal;
+  const waterGal =
+    scaled.finalVolume - baseGallons - hfcsVolumeGal;
 
   resultsDiv.innerHTML = `
     <div class="result">
       <div class="k">Water Required</div>
-      <div class="v">${fmt(correctedWaterGal,3)} gal</div>
-      <div class="muted">Final − Base − Liquid Adds</div>
+      <div class="v">${fmt(waterGal)} gal</div>
     </div>
 
     <div class="result">
       <div class="k">Final Volume</div>
-      <div class="v">${fmt(scaledBase.finalVolume,3)} gal</div>
+      <div class="v">${fmt(scaled.finalVolume)} gal</div>
     </div>
 
     <div class="result">
       <div class="k">Alcohol Content</div>
-      <div class="v">${fmt(scaledBase.alcoholPG,2)} PG</div>
+      <div class="v">${fmt(scaled.alcoholPG,2)} PG</div>
     </div>
 
     ${ingredientBlocks}
@@ -319,12 +278,12 @@ function runWizard(){
 }
 
 recipeSelect.addEventListener("change",()=>{loadRecipe();runWizard();});
-[baseGallonsInput, baseProofInput, finalProofInput].forEach(el=>{
-  el.addEventListener("input", runWizard);
-});
+[baseGallonsInput,baseProofInput,finalProofInput]
+  .forEach(el=>el.addEventListener("input",runWizard));
 
 loadRecipe();
 runWizard();
 </script>
+
 </body>
 </html>
