--- a/recipe-scaling.html
+++ b/recipe-scaling.html
@@ -37,8 +37,12 @@
 
     .grid{
       display:grid;
-      grid-template-columns:repeat(auto-fit,minmax(220px,1fr));
-      gap:14px;
+      grid-template-columns:repeat(auto-fit, minmax(180px, 1fr));
+      gap:18px;
+    }
+    
+    .panel input{
+    max-width:100%;
     }
 
     label{
@@ -66,12 +70,21 @@
     }
 
     .result{
-      background:#0f1e3a;
-      border:1px solid #475569;
-      border-radius:10px;
-      padding:14px;
+      background:#0b1220;           /* darker than page */
+      border:1px solid #334155;
+      border-radius:12px;
+      padding:16px;
+      box-shadow:
+      inset 0 0 0 1px rgba(255,255,255,0.02);
     }
-
+    .result .v{
+      font-size:1.2rem;
+      font-weight:700;
+      letter-spacing:.2px;
+    }
+    .panel + .panel{
+      margin-top:22px;
+    }
     .k{font-size:.75rem;color:#9ca3af;margin-bottom:4px}
     .v{font-size:1.15rem;font-weight:650}
     .muted{color:#9ca3af;font-size:.85rem}
