--- a/recipe-scaling.html
+++ b/recipe-scaling.html
@@ -209,6 +209,44 @@ const RECIPES = {
       { name:"Malic Acid",  type:"solid", amount:8,  unit:"g" }
     ]
   }
+  spicy_pineapple: {
+  name: "Spicy Pineapple Moonshine",
+  base: { gallons: 5, proof: 155 },
+  final: { proof: 60 },
+  ingredients: [
+    {
+      name: "HFCS 42",
+      type: "percent_vv",
+      percent: 0.14,
+      densityKgPerL: 1.613
+    },
+    {
+      name: "Apex Pineapple Flavor (Natural & Artificial)",
+      type: "liquid",
+      amount: 420,
+      unit: "mL"
+    },
+    {
+      name: "Apex Capsicum Natural Extract",
+      type: "liquid",
+      amount: 12,
+      unit: "mL"
+    },
+    {
+      name: "Citric Acid",
+      type: "solid",
+      amount: 27,
+      unit: "g"
+    },
+    {
+      name: "Malic Acid",
+      type: "solid",
+      amount: 8,
+      unit: "g"
+    }
+  ]
+}
+
 };
 
 const GAL_TO_L = 3.785411784;
